  (Only hex notations with 6 characters are valid). Also added testcase for the
  atkColorPickerAttribute [Dennis]
+ The submit-handling of a the javascript method atkMRASubmit() can be overridden by proving
  a javascript method with the name atkMRA_<action>. Where action is the name of the action you
  wish to override. [Peter, Dennis]
* Fixed atkTagAttribute (javascript was not working when the atkTagAttribute
  was used in a relation). [Harrie]
* Fix dispay seconds in edit mode - atktimeattribute. [Yury]
* Fix decode in atkcustomrecordlist. [Yury]
* Added missing seconds to function atkDateTimeAttribute.datetimeArray(). [Patrick]
* Fixed removing a file with the atkfileattribute when using the attribute on one2one
  child node. [Martin]
* To calculate a UTC offset you also need the datetime next to the timezone because
  of DST differences. [Tjeerd]
* Fix meta->_applyAttribute() - setting attribute flag using setTypeAndParams and AddFlags
  methods together.(bug #889) [Yury]
* AtkAttribute - Prevent register onChangehandler more then one time and move constant part
  out of cycle. [Yury]
* Add atkAttrRowHidden style to steelblue theme. [Yury]
* Don't display letter as bold, if it don't use as index. [Yury]
* Fix atkmlnumberattribute->validate method. (bug #883) [Yury]
* Fix saving new password to db after "password forgotten". (bug #819) [Yury]
* Fix and testcase for using number 0 as index for atklistattribute. (bug #723) [Yury]
* Fix and testcase for using searching number 0 in atknumberattribute field. (bug #726) [Yury]
* Fix display obligatory fields in integrated form. (bug #845) [Yury]
* Change hard coded "seq_" to atkConfig("database_sequenceprefix"). (bug #859) [michele.rota] [Yury]
* Fix Ajax calls handling of "umlauten" like ä,ü,ö. (bug #880) [Yury]
* Fix sql query fails when going back from viewing role of team member.
  (bug #757) [Yury]
* Fix multi referential keys support to hasOne. Example: